--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<!doctype html5>
+<!DOCTYPE html>
 <title>redefine design</title>
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="styles.css">
+<div class="container">
+  <h1 class="text-center">Redefine Design</h1>
+  <h2 class="text-center"><small>Don't just renovate, redefine what your home can be!</small></h2>
+  <p class="lead">A home can be just a place you come back to at the end of the day, or it can be a place that nourishes you, helps your family to thrive, and supports the life you want.</p>
+  <p>The way we use our homes is very different from past generations. Our values are different, our family dynamics are different, our priorities are different, but the way we think about the spaces in our homes is still the same as our parents and grandparents. The words we use to describe our spaces affect how we think about them. Those words can hide the true potential of a space or allow us to think of our home in a whole new way. By doing this we can break through the assumptions of the past and make spaces that truly reflect the unique needs of those who will call it... <br /><br /><strong>HOME.</strong></p>
+  <div class="spaces">
+    <div>Space to GATHER</div>
+    <div>Space to CONNECT</div>
+    <div>Space to BOND</div>
+    <div>Space to PLAY</div>
+    <div>Space to RESTORE</div>
+    <div>Space to CREATE</div>
+  </div>
+</div>
